--- a/src/app/gestor/usuarios/usuarios.component.css
+++ b/src/app/gestor/usuarios/usuarios.component.css
@@ -292,7 +292,7 @@ input#dt-search-0.dt-input {
 
 /* modales */
 
-::ng-deep div.swal2-popup {
+.mi-popup {
   border-radius: 32px;
   border: 2px solid #000;
 
@@ -301,7 +301,78 @@ input#dt-search-0.dt-input {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
 }
 
-::ng-deep h2.swal2-title {
+.mi-titulo {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: center;
+}
+
+.mi-boton {
+  width: 300px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.mi-boton:hover {
+  background: var(--Cinder-950, #040813 );
+}
+
+.mi-popup2{
+
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+
+} 
+
+.misCosas{
+
+  margin-top: 40px;
+  text-align: left;
+  
+}
+
+.misCosas > label{
+
+  color:  var(--Cinder-900, #152D65) ;
+  margin-left: 40px;
+  color: var(--Cinder-900, #152D65);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+.misCosas > .swal2-select{
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
+    border: none;
+    font-size: 1.2rem;
+    display: flex;
+    width: 227px;
+    height: 49px;
+    padding-left: 2%;
+    justify-content: flex-end;
+    align-items: center;
+    flex-shrink: 0;
+
+}
+
+.mi-titulo2 {
   color: var(--Cinder-950, #040813);
   border-bottom: solid 2px black;
 
@@ -311,49 +382,25 @@ input#dt-search-0.dt-input {
   text-align: left;
 }
 
-::ng-deep div.swal2-html-container > h3 {
-  color: var(--Cinder-900, #152D65);
-
-  text-align: left;
-  margin-top: 4%;
-  margin-left: 1%;
-}
-::ng-deep div.swal2-html-container > input {
-  color: black;
-  background: var(--Cinder-50, #F1F5FE);
-  border: none;
-
-  padding-left: 10px;
-  margin-left: -51%;
-}
-
-::ng-deep div.swal2-html-container > textarea {
-  width: 100%;
-  height: 80px;
-  
-  color: black;
-  background: var(--Cinder-50, #F1F5FE);
-  border: none;
-
-  padding-left: 0px;
-  resize: none;
-}
-
-::ng-deep .swal2-confirm {
-  width: 400px;
+.mi-boton2 {
+  width: 370px;
 
   border-radius: 4px;
   border: 2px solid var(--Cinder-900, #152D65);
   background: var(--Cinder-900, #152D65);
   box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-::ng-deep div.swal2-html-container > input.Por.empezar {
-  background-color: var(--Rojo, #FF6F6F);;
-}
-::ng-deep div.swal2-html-container > input.En.curso {
-  background-color: var(--Amarillo-3, #FACD84);;
-}
-::ng-deep div.swal2-html-container > input.Completada {
-  background-color: var(--Verde, #B8FFB5);;
+.mi-cruz{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
 }
