--- a/src/app/perfil-ordenador/perfil-ordenador.component.html
+++ b/src/app/perfil-ordenador/perfil-ordenador.component.html
@@ -1,33 +1,49 @@
-<h2>Perfil</h2>
+<div class="d-flex flex-row">
+  <app-menu></app-menu>
+<router-outlet />
 
-<div>
+<img class="imgPag" src="./assets/perfil.png" alt=""><p class="tituloSecc">Perfil</p>
 
-  <h2>Perfil de Usuario</h2>
-  
-  <div>
-    <label for="nombre"><strong>Nombre:</strong></label>
-    <input id="nombre" type="text" [value]="usuario.nombre" readonly>
-    <!-- readonly hace que sean inputs de solo lectura -->
-  </div>
+<div id="todo" class="d-flex flex-row justify-content-center">
 
-  <div>
-    <label for="email"><strong>Email:</strong></label>
-    <input id="email" type="email" [value]="usuario.email" readonly>
-  </div>
+    <div>
 
-  <div>
-    <label for="rol"><strong>Rol:</strong></label>
-    <input id="rol" type="text" [value]="usuario.rol" readonly>
-  </div>
+      @if (rol == 'administrativo') {
 
-  <div>
-    <label for="telefono"><strong>Teléfono:</strong></label>
-    <input id="telefono" type="text" [value]="usuario.telefono" readonly>
-  </div>
+          <img class="perfil" src="./assets/Administrativo/fernando.svg" alt="">
+      
+      }
+      @if (rol == 'gestor') {
 
-  <div>
-    <label for="direccion"><strong>Dirección:</strong></label>
-    <input id="direccion" type="text" [value]="usuario.direccion" readonly>
-  </div>
+        <img class="perfil" src="./assets/Gestor/germanP.png" alt="">
+
+    }
+      
+    <div id="datos" class="datos-container">
+      <div class="input-group">
+        <label for="nombre"><strong>Nombre</strong></label>
+        <input id="nombre" type="text" [value]="usuario.name" readonly>
+      </div>
+    
+      <div class="input-group">
+        <label for="email"><strong>Email</strong></label>
+        <input id="email" type="email" [value]="usuario.email" readonly>
+      </div>
+    
+      <div class="input-group">
+        <label for="rol"><strong>Cargo</strong></label>
+        <input id="rol" type="text" [value]="usuario.cargo" readonly>
+      </div>
+    
+      <div class="input-group">
+        <label for="telefono"><strong>Teléfono</strong></label>
+        <input id="telefono" type="text" [value]="usuario.telefono" readonly>
+      </div>
+    
+      <div class="input-group">
+        <label for="direccion"><strong>Código Postal</strong></label>
+        <input id="direccion" type="text" [value]="usuario.codigoPostal" readonly>
+      </div>
+    </div>
 
 </div>
